--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2581,107 +2581,107 @@ stories:
   domain: http://www.freemansd.com/
   link: https://www.freemansd.com/article/freeman-academy-ribs-fundraiser-returns-saturday
 images:
-- name: old-barn-old-barn-1500-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kandinsky-bv.jpg
-- name: fence-mexico-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-space-pizza.jpg
-- name: downtown-trucksilo-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-deep-connections.jpg
-- name: yuma-bank-yuma-bak-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alberto-giacometti.jpg
-- name: hollywood-building-hollywood-building-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-constitution.jpg
-- name: hollywood-building-hollywood-building-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-clean-view.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
-- name: capital-battle-capitolbattle-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-matrix.jpg
-- name: oldsmallboat-oldsmallboat-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-green-zuma.jpg
-- name: nazi-invasion-IMG_8494.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8494.jpg
-- name: old-door-lock-old-door-lock-2-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-collage.jpg
-- name: old-gas-pumps-oldgaspumps-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-space-pizza.jpg
-- name: old-cabin-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-dream.jpg
-- name: oldtrain-oldtrain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-aqua.jpg
-- name: dragon-desert-desert-dragon-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-deep-connections.jpg
-- name: subway-subway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
-- name: adam-smith-adam-smith-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-cinnamon-rolls.jpg
-- name: oldtrain-oldtrain-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-post-modern.jpg
-- name: downtown-los-angeles-downtown-la-ww2-dresden.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-ww2-dresden.JPG
-- name: nyc-flag-nycflag-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-granite.jpg
-- name: containership-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
-- name: oldhouse-oldhouse-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-marcel-duchamp.jpg
-- name: miamibeach-miamibeach-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-soul.jpg
-- name: paris-paris-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-dream.jpg
-- name: nazi-invasion-DSC_0088.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0088.jpg
-- name: fence-mexico-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-electricity.jpg
-- name: oldbarn-oldbarn-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-dream.jpg
-- name: status-berlin-status-berlin-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kandinsky-bv.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
-- name: status-berlin-status-berlin-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-mucha-mult.jpg
-- name: miamibeach-miamibeach-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crafty-painting.jpg
-- name: locked-up-steam-lock-up-steam-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-dys-1.jpg
-- name: bluelake-clean-view-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
-- name: statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
-- name: store-on-corner-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
-- name: cargo-ship-cargo-ship-on-sea-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-horiz-circuit.jpg
-- name: anza-borrego-desert-state-park.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/anza-borrego-desert-state-park.jpg
-- name: oldtrain-oldtrain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kand-two.jpg
-- name: razorcliff-razorcliff-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colored-circuits.jpg
-- name: old-school-house-old-schoolhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-far-away.jpg
-- name: nyc-flag-nycflag-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-smooth-ride.jpg
-- name: adam-smith-adam-smith-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
-- name: carry-load-carryload-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-cinnamon-rolls.jpg
-- name: machine-road-machine-road-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-yellow-collage.jpg
-- name: ellis-island-ellisisland-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-electricity.jpg
-- name: subway-subway-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-sunday.jpg
-- name: adam-smith-adam-smith-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purp-paper.jpg
-- name: school-clouds-church-clouds-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-free-woman.jpg
-- name: locked-up-steam-lock-up-steam-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-diego-rivera1.jpg
-- name: nyc-flag-nycflag-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-dream.jpg
+- name: walled-garden-walled-garden-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-atari-asteroids.jpg
+- name: status-berlin-status-berlin-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-far-away.jpg
+- name: locked-up-steam-lock-up-steam-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-rain.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
+- name: subway-subway-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
+- name: border-fence-border-fence-on-hill-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purple-storm.jpg
+- name: oldhouse-granaryfield-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-light-dali.jpg
+- name: ellis-island-ellisisland-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-deep-connections.jpg
+- name: carry-load-carryload-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colored-circuits.jpg
+- name: supreme-court-supremecourt-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-light-dali.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+- name: curtain-curtain-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-dali.jpg
+- name: razorcliff-razorcliff-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-granite.jpg
+- name: blossombar-crunch-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-50-62.jpg
+- name: old-school-house-old-schoolhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-attack-planes.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-5.jpg
+- name: aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
+- name: blossombar-blue-granite-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-50-62.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+- name: berlinwall-DSC-0084-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
+- name: mistywoods-babyfoot-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dry-skin.jpg
+- name: blossombar-far-away-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-24-99.jpg
+- name: adam-smith-adam-smith-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-mucha-mult.jpg
+- name: paris-paris-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-constitution.jpg
+- name: statue-of-liberty-front-view-statueofliberty-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-hot-spicy.jpg
+- name: old-barn-old-barn-1500-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dali-three.jpg
+- name: art-museum-art-museum-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-5.jpg
+- name: berlinwall-DSC-0084-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-smooth-ride.jpg
+- name: old-cabin-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gred-mash.jpg
+- name: legal-statue-legalstatue-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-really-hot.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-4.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-pablo-blue.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-wols.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-wols.png
+- name: oldtrain-oldtrain-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gan-vogh.jpg
+- name: oldsmallboat-oldsmallboat-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-oily-mcoilface.jpg
+- name: machine-road-machine-road-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-asteroids.jpg
+- name: white-house-whitehouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crunch-paper.jpg
+- name: dragon-desert-desert-dragon-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
+- name: hollywood-building-hollywood-building-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purp-paper.jpg
+- name: copper-circuit-IMG_6200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6200.jpg
+- name: nyc-flag-nycflag-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-pond.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
+- name: old-school-house-old-schoolhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-neo-instinct.jpg
+- name: windowmountain-window-mountain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-nazi-poster.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-neo-instinct.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-granite.jpg
+- name: beach-clouds-lifeguard-beachclouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dali-three.jpg
+- name: docks-docks-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-kand-two.jpg
+- name: store-on-corner-oldcabin-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colored-circuits.jpg
+- name: yosemite-yosemite-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crabapple.jpg
+- name: stories-new-80-140-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-140-800-500-0-max-0--5--5.jpg
 ---
 Wilson Wins Half Marathon.&nbsp;Utah Poacher Claims Harsh Handcuffing By Game Wardens Tore Both Rotator Cuffs.&nbsp;Japan Cites Security Concerns In Curbing Exports To SKorea.&nbsp;Rotted Wooden Sculpture Of Native American To Be Replaced.&nbsp;Border Patrol Head Condemns Agents' Offensive Facebook Posts.&nbsp;The New Turf Is In At Todd Field As Renovations Continue.&nbsp;Take Cover Florida As July Is The Deadliest Month For Lightning.&nbsp;Hearings Start For Rezoning Application.&nbsp;
